2011-04-03  Mark Grondona <mgrondona@llnl.gov>

	* tests/test-lib.sh :
	  Add prereq checks for seq(1) and expr(1), and add a
	  somewhat portable random() function for random number
	  generation.

	* tests/t5000-dshbak.sh :
	  Fix another case where dshbak -d test on non-writable dir
	  would erroneously fail. (Issue 11).

2011-04-01  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/execcmd.c :
	  Fix interactive dsh with exec. Instead of trying to split
	  the cmdline entered in interactive mode internally within
	  pdsh, the exec module will pass the command as a string
	  to sh -c.

	* tests/t2000-exec.sh :
	  Add a few simple exec module specific tests.

	* src/modules/sscmd.c :
	  Fix interactive dsh with ssh. (Issue 14)

	* tests/t2001-ssh.sh :
	  Add test for issue 14: interactive mode broken with ssh.

2011-03-09  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.25.

2011-03-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c :
	  Fix pdcp when used with ssh. (Issue 12)

	* tests/t2001-ssh.sh :
	  Add some simple ssh tests.

2011-03-05  Mark Grondona <mgrondona@llnl.gov>

	* tests/test-lib.sh :
	  Check ownership of pdsh binary and build directory and complain
	  and exit with error if they are different.

2011-03-04  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0004-module-loading.sh, tests/t0006-pdcp.sh :
	  Set the NOTROOT prereq for all tests that require PDSH_MODULE_DIR,
	  since this environment variable is not functional as root.

	* tests/test-lib.sh :
	  Set NOTROOT prereq when tests are not run as root.

	* tests/t1000-dshbak.sh :
	  Add SANITY prereq when testing non-writable dir.

	* tests/t0001-basic.sh :
	  Don't depend on /bin/true for test of working
	  test_expect_success(), use builtin ':' instead.

2011-02-28  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.24.

	* src/modules/sshcmd.c :
	  Fix functionality of PDSH_SSH_ARGS_APPEND. The value
	  of this environment variable is now prepended to other ssh args,